--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "url": "https://github.com/gerogarcia03/backend/issues"
   },
   "homepage": "https://github.com/gerogarcia03/backend#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "node": "^19.2.0"
+  }
 }
