--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "startnode": "node index.js"
+    "start": "nodemon src/app.js",
+    "startnode": "node src/app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gerogarcia03/backend.git"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/gerogarcia03/backend#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "node": "^19.2.0",
     "nodemon": "^2.0.20"
   },
