--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "homepage": "https://github.com/gerogarcia03/backend#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "node": "^19.2.0",
-    "nodemon": "^2.0.20"
+    "node": "^19.3.0",
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0"
   },
   "keywords": [],
   "description": ""
