--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/gerogarcia03/backend#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.7",
     "node": "^19.3.0",
     "nodemon": "^2.0.20",
+    "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
   },
   "keywords": [],
